# ds-aa-eth-drought

./: .gitignore  README.md  _targets.R  aws_grib_to_cog.R  pyproject.toml  requirements.txt  run.R
R/: aws_tools.R  blob_connect.R  cloud_storage_tools.R  grib_tools.R  load_data.R  plot_data.R  process_data.R  setup.R  tar_ecmwf.R  utils.R
analysis/: 00_fewsnet_seasons.Rmd  00_number_of_seasons.Rmd  01_0_wfp_nextgen_trigger_review.R  01_1_reviewing_ecmwf_july_august_forecast_for_ond.R  01_1_reviewing_july_forecast_for_ond.R  01_2_reviewing_aug_forecast_for_ond.R  01_2_reviewing_ecmwf_nextgen_leadtime.R  01_3_emi_woredas_triggered_july_forecast.R  01_3_reviewing_sept_forecast_for_ond.R  01_3_wfp_woredas_triggered.R  01_4_emi_woredas_triggered_august_forecast.R  01_drought_prone_zones.R  01_forecast_performance.Rmd  02_0_fewsnet_livelihood_zones_by_season.R  02_0_historical_conditions_review.ipynb  02_1_asap_land_masks_by_zone.R  02_1_reviewing_aug_forecast_for_ond.R  02_consecutive_seasons.Rmd  03_0_pin_analysis.ipynb  03_0_pin_analysis.md  03_1_sectoral_pin.md  05_0_drought_trigger_era5_analysis.ipynb  05_1_drought_trigger_era5_analysis_distribution.ipynb  05_2_drought_trigger_iri_maproom_analysis.ipynb  05_3_drought_trigger_leap_analysis.ipynb  05_4_drought_trigger_summary_mam.ipynb  05_5_drought_trigger_summary_jjas.ipynb  05_6_drought_trigger_summary_ond.ipynb  05_7_process_fewsnet_wrsi_belg.ipynb  amhara.R  forecast_bias.Rmd  performance.Rmd  rainy_seasons.Rmd  rainy_seasons_lhz.Rmd  red_cross_trigger.Rmd  seasons.R
data-raw/: download_ecmwf_seasonal_mars.py  (+1 more)
(+9 files in other folders)
